# sdl_scrollbox

./: .gitignore  CMakeLists.txt
SDL_scrollbox/: CMakeLists.txt  common.h  error.cpp  error.h  font_manager.cpp  font_manager.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  menu_item.cpp  menu_item.h  object.cpp  object.h  renderer.cpp  renderer.h  texture_manager.cpp  texture_manager.h
SDL_scrollbox.xcodeproj/: project.pbxproj
SDL_scrollbox.xcodeproj/xcuserdata/muzyka.xcuserdatad/xcschemes/: xcschememanagement.plist
